manifests/pipeline/dashboard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-inflight
  namespace: pipeline
  labels:
    app: dashboard
spec:
  inFlightReq:
    amount: 30
    sourceCriterion:
      requestHeaderName: Cf-Connecting-IP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-ratelimit
  namespace: pipeline
  labels:
    app: dashboard
spec:
  rateLimit:
    average: 20
    period: 1s
    burst: 100
    sourceCriterion:
      requestHeaderName: Cf-Connecting-IP
