manifests/pipeline/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: pipeline
  labels:
    app: dashboard
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - name: http
      port: 8501
      targetPort: http
