manifests/pipeline/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: pipeline
  labels:
    app: dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: dashboard.yn-tech.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 8501
